Wed Jan 13 22:07:47 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/zlib/test_zlib.rb: backport tests for 1.9

Wed Jan 13 06:54:44 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: check for if struct timezone is defined.

	* missing.h (struct timezone): define if not defined.

	* win32/win32.h (struct timezone): defined in the newer w32api.
	  [ruby-core:27515]

Tue Jan 12 23:58:27 2010  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/base.rb, test/rss/test_maker_0.9.rb:
	accept any time format in maker. [ruby-core:26923]

Tue Jan 12 12:49:39 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-here-doc-beg-match): fix for here-doc
	  which ends with an underscore.

Mon Jan 11 13:30:35 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/webrick/accesslog.rb (WEBrick::AccessLog#format): fixed typo.

	* lib/webrick/httpstatus.rb (WEBrick::HTTPStatus::Status#initialize):
	  accept 0 or more arguments.  [ruby-dev:40021]

Mon Jan 11 03:04:12 2010  Akinori MUSHA  <knu@iDaemons.org>

	* eval.c (recursive_push): Taint internal hash to prevent
	  unexpected SecurityError; fixes #1864.

Sun Jan 10 17:25:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/webrick/accesslog.rb : Escape needed.

	* lib/webrick/httpstatus.rb : ditto.

	* lib/webrick/httprequest.rb : ditto.

	* lib/webrick/httputils.rb : ditto.

Sun Jan 10 04:54:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rb_define_class): raise TypeError same as class
	  statement.  [ruby-core:27504]

Sat Jan  9 08:40:54 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/configure.bat (WIN32DIR): regularise file separators.

Fri Jan  8 18:51:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_fwrite): preserve errno.  [ruby-core:27425]

Fri Jan  8 17:07:15 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (rb_io_s_read): close the IO if an exception is raised on
	  seeking. [ruby-core:27429]
